--- a/cadence/rapport.tex
+++ b/cadence/rapport.tex
@@ -41,34 +41,30 @@
     \thispagestyle{empty}
 \end{titlepage}
 
-\section{Design and Simulation of the electrical schematic of the operational amplifier (Cadence Composer schematic editor and Spectre)}
-
-\begin{tabular}{|l|r|}
+\begin{tabular}{|l|r|r|}
     \hline
-    Electrical Characteristics & simulation Results \\
+    Electrical Characteristics & simulation Results & simulation post-layout \\
     \hline
-    Power Consumption & 10.2mW\\
+    Power Consumption & 10.2 mW & 9.834 mW \\
     \hline
-    Open Loop Gain & 49dB\\
+    Open Loop Gain & 49 dB & 47.15 dB \\
     \hline
-    Bandwidth & 3.14MHz\\
+    Bandwidth & 3.9 MHz & 4.3 MHz \\
     \hline
-    Offset & 22mV\\
+    Offset & 22 mV & 20mV \\
     \hline
-    Input Voltage nois (Power spectrum Density) & 7mV \\
+    Input Voltage nois (Power spectrum Density) & 7mV & 6.66mV \\
     \hline
-    Phase Margin & 53°\\
+    Phase Margin & 53° & 52° \\
     \hline
-    Gain Margin & 27dB\\
+    Gain Margin & 27 dB & 24.5 dB \\
     \hline
-    Slew Rate & 1.155V/ns\\
+    Slew Rate & 1.155 V/ns & 1.200 V/ns \\
     \hline
 \end{tabular}
 
-
+\section{Design and Simulation of the electrical schematic of the operational amplifier (Cadence Composer schematic editor and Spectre)}
 \section{Layout of the schematic using the technology rule sets provided by the fondery AMS for this 0.35$\mu$m CMOS process}
-
-
 \section{Simulations post-layout}
 
 
